kuber_with_db/app_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
        - name: web-app-container
          image: simon1405/web-app-db
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /web-app/all    # путь в приложении который должен возвращать 200
              port: 8080        # порт прослушиваемый приложением
            initialDelaySeconds: 20	# время ожидания от старты контейнера до первой пробы (default 0, min 0)
            periodSeconds: 10		# период между пробами (default 10, min 1)
