kuber_with_db/app_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: web-app.my
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: web-app-service-node-port   #   app_service_NodePort.yml.yml
                port:
                  number: 82

# how to use
#   kubectl get ingresses   =>    web-app-ingress   nginx   web-app.my   192.168.49.2   80      48m
#   minikube tunnel
# variant 1 (use Git Bush, in powershell --resolve don't work)
#   curl http://web-app.my/web-app/hello --resolve web-app.my:80:127.0.0.1    =>    127.0.0.1 is localhost course uses minikube in docker, must be - minikube ip
# variant 2 (for Postman or curl without --resolve)
#  in file C:\Windows\System32\drivers\etc\hosts  add  127.0.0.1 web-app.my    =>    127.0.0.1 is localhost course uses minikube in docker, must be - minikube ip
#   curl http://web-app.my/web-app/hello
